# barbucket

./: .env  .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  Pipfile  README.md  StockChart.html  Untitled Diagram.drawio  app.py  application.py  bad-data.py  bad_data.py  barbucket.py  barbucket_class_diagram.drawio  bokeh_test.py  build-datatable.py  build_process.md  class_structure.md  dash-app.py  data_app.py  default_config.ini  download-quotes.ipynb  download-quotes.py  download_quotes.ipynb  get_symbols.ipynb  get_tradingdays.ipynb  mkdocs.yml  requirements-dev.txt  requirements-docs.txt  requirements.txt  screener-engine.py  screener.ipynb  screener.py  setup.cfg  show-results.py  structure.md  symbol_db.json  t7-xetr-allTradableInstruments.csv  t7-xetr-allTradableInstruments.ods  (+3 more)
archive/: additional_db_queries.py  cli.py  contracts_db_connector.py  ib_details_processor.py  ib_exchange_listings_processor.py  main.py  manual_db_queries.sql  quotes_db_connector.py  signal_handler.py  tv_details_db_connector.py
barbucket/: __init__.py  app_interface.py  base_component.py  cli.py  config.ini  config.py  config_initializer.py  config_reader.py  config_reader_builder.py  connectionstring_assembler.py  contract_details_db.py  contract_details_ib.py  contract_details_tv.py  contracts.py  contracts_db.py  contracts_db_connector.py  custom_exceptions.py  data_classes.py  data_managers.py  data_quality_check.py  database.py  databse_migration.py  db_connector.py  db_initializer.py  default_config.cfg  default_config.ini  encoder.py  encodings.py  graceful_exiter.py  ib_details_connector.py  ib_details_db_connector.py  ib_details_processor.py  ib_exchange_listing_reader.py  ib_exchange_listings_processor.py  ib_quotes_processor.py  main.py  mediator.py  orm_connector.py  quotes.py  quotes_db.py  (+14 more)
data_management/: bad_data.py  config.ini  contracts.db  contracts.py  contracts_db.py  data_quality_check.py  database.py  find_non_trading_days.py  histo.py  quotes_db.py  req_historical_data.py  tws_connector.py
docs/: cli.md  conf.py  (+15 more)
(+191 files in other folders)
