[metadata]
name = barbucket
version = 0.1
url = https://github.com/croidzen/barbucket
description = My package description
long_description = file: README.md
long_description_content_type = markdown
license = MIT License


[options]
zip_safe = False
# include_package_data = True
# packages = find:
# scripts =
#     bin/first.py
#     bin/second.py
python_requires = >=3.6
install_requires =
    beautifulsoup4
    click
    enlighten
    ib-insync
    numpy
    pandas
    requests
    trading-calendars

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

[options.entry_points]
console_scripts =
    barbucket = barbucket.main:main
