[metadata]
name = barbucket
version = 0.2
description = My package description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/croidzen/barbucket
project_urls =
    Documentation = https://barbucket.readthedocs.io/
license = MIT License
author = Martin Creutzenberg
author_email = martin.creutzenberg-AT-gmail-DOT-com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Topic :: Database
    Topic :: Office/Business :: Financial :: Investment
    Topic :: Scientific/Engineering :: Information Analysis

[options]
zip_safe = False
packages = barbucket.main, barbucket._resources
# packages = find:
# package_dir =
#     =barbucket
python_requires = >=3.7
install_requires =
    beautifulsoup4
    click
    enlighten
    ib-insync
    numpy
    pandas
    requests
    trading-calendars

# [options.packages.find]
# where = barbucket

[options.package_data]
barbucket._resources = default_config.cfg

[options.entry_points]
console_scripts =
    barbucket = barbucket.main:main
